Устранение проблем, показанных Idea.