@@ -4,12 +4,12 @@ import java.util.ArrayList;
 
 public class InMemoryHistoryManager implements HistoryManager{
     static final int MAX_HISTORY_SIZE = 10;
-    private ArrayList<Task> historyList = new ArrayList<>();
+    private final ArrayList<Task> historyList = new ArrayList<>();
 
     @Override
     public void add(Task task) {
         if (historyList.size() == MAX_HISTORY_SIZE) {
-            historyList.remove(0);
+            historyList.removeFirst();
         }
         historyList.add(task);
     }
